--- a/my-app-frontend/src/Header/Header.css
+++ b/my-app-frontend/src/Header/Header.css
@@ -1,10 +1,22 @@
 .header{
   background-color: #3C91E6;
   color: white;
-  margin-top: 0%;
+  margin: 0;
+  padding: 0;
   font-family: 'Arvo', serif;
+  list-style-type: none;
+}
+li{
+  display: inline;
+  text-align: right;
+}
+
+ul{
+  margin: 0;
+  text-align: right;
 }
 h1{
   text-align: left;
-  padding: 10px 0px 10px 20px;
+  padding: 10px 100px 10px 20px;
+  margin: 0px 0px 0px 0px;
 }
