--- a/my-app-frontend/src/Header/Header.css
+++ b/my-app-frontend/src/Header/Header.css
@@ -1,10 +1,11 @@
 .header{
+  display: flex;
+  justify-content: space-around;
   background-color: #3C91E6;
   color: white;
   margin: 0;
   padding: 0;
   font-family: 'Arvo', serif;
-  list-style-type: none;
 }
 li{
   display: inline;
@@ -13,10 +14,28 @@ li{
 
 ul{
   margin: 0;
-  text-align: right;
+  padding: 20px;
 }
-h1{
+
+#logo{
+  font-size: 50px;
   text-align: left;
-  padding: 10px 100px 10px 20px;
-  margin: 0px 0px 0px 0px;
+  padding: 0px 10px 0px 10px;
+  margin: 10px;
+}
+
+button{
+  font-family: 'Arvo', serif;
+  font-weight: 300;
+  font-size: 15px;
+  background-color: #FFA400;
+  color: #edede9;
+  border: none;
+  border-radius: 16px;
+  padding: 10px 20px;
+  margin: 0px 20px;
+}
+
+button:hover{
+  background-color: #fad5
 }
