--- a/my-app-frontend/src/Header/Register.css
+++ b/my-app-frontend/src/Header/Register.css
@@ -1,12 +1,17 @@
 
 
 .reg-cont{
+  padding: 5px;
   position: absolute;
   background-color: #f9f9f9;
+  border: 1px solid black;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   transition: all 0.5s ease;
+}
+label{
+  color: #3C91E6;
 }
 
 .reg-cont li{
