--- a/my-app-frontend/src/Header/Login.css
+++ b/my-app-frontend/src/Header/Login.css
@@ -1,18 +1,23 @@
-
 .log-cont{
+  padding: 5px;
   position: absolute;
   background-color: #f9f9f9;
+  border: 1px solid black;
+  border-radius: 15px;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index:1;
+  z-index: 1;
+  transition: all 0.5s ease;
+}
+label{
+  color: #3C91E6;
 }
 
-.log-cont a{
+
+#login-btn{
   position: relative;
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
   display: block;
-  text-align: left;
+}
+button{
+  margin-top: 5px;
 }
