--- a/my-app-frontend/src/Header/Register.css
+++ b/my-app-frontend/src/Header/Register.css
@@ -5,21 +5,15 @@
   position: absolute;
   background-color: #f9f9f9;
   border: 1px solid black;
+  border-radius: 15px;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  transition: all 0.5s ease;
 }
 label{
   color: #3C91E6;
 }
 
-.reg-cont li{
-  position: relative;
-  float: right;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+.sign-up{
+  margin-top: 5px;
 }
