--- a/my-app-frontend/src/MainComponent/JobForm.css
+++ b/my-app-frontend/src/MainComponent/JobForm.css
@@ -8,8 +8,8 @@
   text-align: center;
   background-color: #edede9;
   color:  #3C91E6;
-  padding: 10px 10px;
-  margin: 1% 15%;
+  padding: 1% 5%;
+  margin: 1% 10%;
   border-radius: 16px;
   border:solid 3px;
   border-color: #cacac7;
