--- a/my-app-frontend/src/Header/Header.css
+++ b/my-app-frontend/src/Header/Header.css
@@ -29,16 +29,16 @@ ul{
   display: flex;
 }
 
-button{
-  font-family: 'Arvo', serif;
-  font-weight: 300;
-  font-size: 15px;
-  background-color: #FFA400;
-  color: #edede9;
-  border: none;
-  border-radius: 16px;
-  padding: 10px 20px;
-  margin: 0px 20px;
+.btn {
+  font-family: 'Arvo', serif !important;
+  font-weight: 300 !important;
+  font-size: 15px !important;
+  background-color: #FFA400 !important;
+  color: #edede9 !important;
+  border: none !important;
+  border-radius: 16px !important;
+  padding: 10px 20px !important;
+  margin: 0px 20px !important;
 }
 
 button:hover{
