--- a/my-app-frontend/src/Header/Register.css
+++ b/my-app-frontend/src/Header/Register.css
@@ -15,5 +15,14 @@ label{
 }
 
 .sign-up{
-  margin-top: 5px;
+  position: relative !important;
+  font-family: 'Arvo', serif !important;
+  font-weight: 300 !important;
+  font-size: 10 px !important;
+  background-color: #FFA400 !important;
+  color: #edede9 !important;
+  border: none !important;
+  border-radius: 16px !important;
+  padding: 10px 20px !important;
+  margin: 10px 20px !important;
 }
