--- a/my-app-frontend/src/Header/Login.css
+++ b/my-app-frontend/src/Header/Login.css
@@ -1,4 +1,4 @@
-.log-cont{
+/* .log-cont{
   align-items: center;
   padding: 5px;
   position: absolute;
@@ -30,4 +30,4 @@ label{
 
 button{
   margin-top: 5px;
-}
+} */
