--- a/my-app-frontend/src/Header/Register.css
+++ b/my-app-frontend/src/Header/Register.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .reg-cont{
   padding: 5px;
@@ -25,4 +25,4 @@ label{
   border-radius: 16px !important;
   padding: 10px 20px !important;
   margin: 10px 20px !important;
-}
+} */
