Commit 32: Added cat for BE

--- a/my-app-frontend/src/MainComponent/JobForm.css
+++ b/my-app-frontend/src/MainComponent/JobForm.css
@@ -8,7 +8,7 @@
   text-align: center;
   background-color: #edede9;
   color:  #3C91E6;
-  padding: 1% 5%;
+  padding-top: 1%;
   margin: 1% 11%;
   border-radius: 16px;
   border:solid 3px;
@@ -23,7 +23,7 @@ span {
   font-size: 25px;
   font-weight: 600;
   color: #3C91E6;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 .add {
   padding-top: 20px;
