Commit 40: Added ability to sign in

--- a/my-app-frontend/src/MainComponent/JobForm.css
+++ b/my-app-frontend/src/MainComponent/JobForm.css
@@ -60,7 +60,7 @@ input {
   border: solid #cacac7;
 }
 
-select {
+.active_form select {
   padding: 5px;
   font-family: "Arvo", serif;
   font-size: 15px;
