--- a/my-app-frontend/src/SignIn/UserSign.css
+++ b/my-app-frontend/src/SignIn/UserSign.css
@@ -39,7 +39,7 @@ h1 {
   font-size: 25px;
 }
 
-.sign-up label {
+ .sign-up label {
   align-items: center;
   justify-content: center;
   display: flex;
@@ -52,11 +52,19 @@ label:first-of-type{
   padding-top: 0;
 }
 
-input{
+.login input{
   /* align-items: center;
   justify-content: center;
   display: flex; */
-  margin-left: 20px;
+  margin:  10px 10px 0px 40px;
+  text-align: center;
+}
+
+.sign-up input{
+  /* align-items: center;
+  justify-content: center;
+  display: flex; */
+  margin:  10px 10px 0px 40px;
   text-align: center;
 }
 
@@ -76,7 +84,6 @@ p{
 
 .sign-up{
   display: flex;
-  display: flex;
   align-items: center;
   justify-content: center;
   background-color: white;
@@ -87,11 +94,9 @@ p{
 }
 
 .sign-up input{
-  /* align-items: center;
+  align-items: center;
   justify-content: center;
-  display: flex; */
-  text-align: center;
-  margin-left: 20%;
+  display: flex;
 }
 
 .sign-up.btn{
@@ -104,9 +109,20 @@ p{
 }
 
 .btn-div{
-  margin-left: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
+#login-submit {
+  margin-left: 15px;
+}
+
+form {
+  align-items: center;
+  justify-content: center;
+}
+
 /* .btn {
   font-family: 'Arvo', serif !important;
   font-weight: 300 !important;
